seeing single threaded

--- a/rag/simplerag.ipynb
+++ b/rag/simplerag.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a951a5b",
    "metadata": {},
    "outputs": [
@@ -78,8 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the context provided, RAG (Retrieval-Augmented Generation) is a technique that combines retrieval and generation to produce more accurate answers.\n",
-      "Loaded 10 Wikipedia docs.\n",
+      "Based on the context provided, RAG appears to be an abbreviation of \"Retrieval-Augmented Generation.\" This can refer to a technique or approach that combines retrieval and generation to improve the accuracy of answers. The context documents mention RAG in relation to LangChain and Ollama, which are frameworks for developing applications powered by language models.\n",
       "Loaded 10 Wikipedia docs.\n"
      ]
     }
